@@ -47,7 +47,7 @@ class JobTest extends \MyTester\TestCase {
       ["abc"], "def"
     ];
     $job2 = new Job("Test Job with Params", [$test, "testParams"], $params);
-    $job3 = new Job("Test Skipped Job", [$test, "test"], NULL, true);
+    $job3 = new Job("Test Skipped Job", [$test, "test"], [], true);
     return [$job, $job2, $job3];
   }
 }
